fix: z-index

--- a/src/pages/ow/home/index.module.css
+++ b/src/pages/ow/home/index.module.css
@@ -21,8 +21,8 @@
     height: calc(68px + var(--button-length) + var(--home-info-height) - 18px);
     background: linear-gradient(
         to right,
-        rgb(63, 66, 129, 0.7),
-        rgb(66, 73, 140, 0.7),
+        rgb(63, 66, 129, 0.9),
+        rgb(66, 73, 140, 0.5),
         rgba(50, 53, 124, 1)
     );
     -webkit-backdrop-filter: blur(10px);
@@ -30,6 +30,17 @@
     box-shadow: 0 0 3px 1px rgba(50, 53, 124, 0.5);
     overflow: hidden;
     z-index: 100;
+}
+
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.1);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 .avatar {
