--- a/src/pages/ow/index.module.css
+++ b/src/pages/ow/index.module.css
@@ -99,6 +99,8 @@ a.square:hover {
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    transform: scale(1);
+    transition: transform 0.2s;
 }
 
 .tab {
@@ -146,7 +148,7 @@ a.square:hover {
     right: 0;
     bottom: 0;
     overflow: hidden;
-    z-index: 10;
+    z-index: 1500;
 }
 
 @keyframes fade {
@@ -199,4 +201,21 @@ main {
     padding: calc(68px + var(--button-length))
         calc(var(--margin-horizon) + 0.6vw) 28px;
     z-index: 500;
+}
+
+/* tab 的背景深度 */
+.tabHome {
+    transform: scale(1.3);
+}
+
+.tabDocs {
+    transform: scale(1);
+}
+
+.tabBlog {
+    transform: scale(1);
+}
+
+.tabGallery {
+    transform: scale(1);
 }
